Finished dashboard without filters,, and auth

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -21,8 +21,8 @@
 </p>
 
 <p>
-  <strong>State:</strong>
-  <%= @project.state %>
+  <strong>Status:</strong>
+  <%= @project.status %>
 </p>
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
