--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -22,6 +22,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :status %>
+    <%= form.select :status,  Project.statuses.keys%>
+  </div>
+
+  <div class="field">
     <%= form.label :initial_date %>
     <%= form.datetime_select :initial_date %>
   </div>
@@ -31,10 +36,6 @@
     <%= form.datetime_select :end_date %>
   </div>
 
-  <div class="field">
-    <%= form.label :state %>
-    <%= form.text_field :state %>
-  </div>
 
   <div class="actions">
     <%= form.submit %>
