--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -9,7 +9,7 @@
       <th>Description</th>
       <th>Initial date</th>
       <th>End date</th>
-      <th>State</th>
+      <th>Status</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -21,7 +21,7 @@
         <td><%= project.description %></td>
         <td><%= project.initial_date %></td>
         <td><%= project.end_date %></td>
-        <td><%= project.state %></td>
+        <td><%= project.status %></td>
         <td><%= link_to 'Show', project %></td>
         <td><%= link_to 'Edit', edit_project_path(project) %></td>
         <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
