--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,6 +2,17 @@
 
 <h1>Projects</h1>
 
+<%= search_form_for @q do |f| %> <!-- esto va a crear los espacios para insertar inputs que necesitamos para la query-->
+
+    <div class="form-group"> <!-- esto va a poner un dropdown menu para buscar en la columna Status -->
+        <%= f.label :status_eq, "Status" %>
+        <%= f.select :status_eq, options_for_select(Project.statuses , @q.status_eq), {},{class: "form-control"} %>
+    </div>
+    <%= f.submit "Search", class: "btn btn-primary" %>
+<% end %>
+
+
+
 <table>
   <thead>
     <tr>
